2007-04-14  Thatcher Ulrich <tu@tulrich.com>

	* gameswf_test_ogl.h, gameswf.h, gameswf/Makefile, as_xml.cpp,
	  config:
	misc compile fixes for msvc + Makefiles.
	* tu_opengl_includes.h:
	compile fix -- just include <windows.h>.  It's too hard to keep
	faking the windows headers.
	* base/png_helper.*:
	added write_rgba() helper function
	* base/ear_clip_triangulate_impl.h:
	catch and work around a degenerate case

2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files:
	implemented unloadMovie() function
	removed useless delete_unused_root() stuff

2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: fixed bug
	(a button may be the sprite's parent therefore it should call execute_frame_tags(0))

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/: cleanup

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf_root.cpp,
	* gameswf/gameswf_movie.h:
	removed useless on_button_event()

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.h: fixed the bug in struct event_id
	I add m_unused because of problem with hash<event_id, ...>
	the reason: sizeof(unsigned char+unsigned char+movie*)  == 8 
	and	 sizeof(unsigned char+unsigned char+Uint16+movie*)  == 8
	I think that compiler do aligment
	
2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: implemented MovieClipLoader, there are some bugs yet

2007-04-10  Thatcher Ulrich <tu@tulrich.com>

	* misc files: minimal changes to get gcc-4.0 compile working.  I
	haven't fixed warnings or bugs yet.

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_xml.*: moved to 
	* gameswf/as_classes/as_xml.*
	* gameswf/as_classes/as_MovieClipLoader.*: removed
	(obsoletly, the new version - as_mcloader.*, now is not finished)
	* gameswf/gameswf_as_sprite.*,
	* gameswf/gameswf_sprite.cpp: added loadMovie method
	* gameswf/gameswf_timer.cpp: cleanup
