@@ -1,3 +1,14 @@
+2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/as_classes/as_mcloader.*: implemented MovieClipLoader.unloadClip() method
+	* gameswf/gameswf_button.cpp: fixed bug arising during loadMovie()
+	* gameswf/gameswf_impl.cpp: added memory leaks debuging code
+	* gameswf/gameswf_sprite.cpp,
+	* gameswf/gameswf_movie_def.cpp: added misc printf
+	* gameswf/gameswf_movie.: character id may be -1 (case of loadMovie())
+	* base/tu_opengl_includes.h: PROC_NAME_PREFIX is missing for WIN32
+	there are memory leaks bug arising after loadMovie(), will be fixed later
+
 2007-04-14  Thatcher Ulrich <tu@tulrich.com>
 
 	* gameswf_test_ogl.h, gameswf.h, gameswf/Makefile, as_xml.cpp,
